Overlap card and fix footer to bottom

--- a/styles.css
+++ b/styles.css
@@ -3,44 +3,35 @@ html, body {
     padding: 0;
     overflow-x: hidden;  
     background-color: hsl(275, 100%, 97%) !important;
-    font-size: 16px;
+    flex-direction: column;
   }
 
-  .container {
-    position: relative;
-    width: 1000%;
-    z-index: 1;
-    min-height: 50vw;
-  }
   
   h1 {
     font-weight: 700 !important;
+    margin-top: 20px;
   }
   
   .accordion-header {
     background-color: white !important;
   }
   
-  .container {
-    padding-left: 0;
-    padding-right: 0;
-  }
-  
   .banner {
     width: 100%;
     height: auto;
-    display: block;  
-    z-index: 0;
+    position: relative;
   }
 
   .card {
     max-width: 500px; 
-    height: auto; 
+    width: 90%;
     margin: 0 auto;  
     padding: 20px;  
     background-color: white;
     border-radius: 10px;
-    position: absolute;
+    top: -80px;    
+    z-index: 10; 
+    min-height: 60vh;
   }
 
   footer {
